<resources>
    <string name="app_name">SensorlaWatchApplication</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">UserName</string>
    <string name="nav_header_title_2">Device ID</string>
    <string name="nav_header_title_3">Server Name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_server">Server</string>
    <string name="menu_device_id">DeviceID</string>
    <string name="menu_wo_list">Work Orders</string>
    <string name="email">Login with email</string>
    <string name="menu_fall_detect">Fall Detection</string>
    <string name="menu_heart_rate">Heart Rate</string>
    <string name="menu_speech">Speech To Text</string>
    <string name="menu_step_counter">Step Counter</string>

    <string name="waiting_for_user">Waiting for user</string>
    <string name="waiting_for_job">Waiting for job</string>
    <string name="logout_msg">Are you sure you want to logout?</string>

    <string name="DeviceId">DeviceId</string>
    <string name="register">REGISTER</string>
    <string name="serverPWD">Password</string>
    <string name="connect">Connect</string>

    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="location">Location</string>
    <string name="human_png">Human</string>

    <string name="acc_login">Account Login</string>
    <string name="sign_in">Sign In</string>
    <string name="faceID">Facial Recognition</string>

    <string name="image">Image</string>

    <string name="last_x_value">last_x_value</string>
    <string name="last_y_value">last_y_value</string>
    <string name="last_z_value">last_z_value</string>
    <string name="x_value">x_value</string>
    <string name="y_value">y_value</string>
    <string name="z_value">z_value</string>
    <string name="current_change_amount">current_change_amount</string>
    <string name="current_boundary">current_boundary</string>

    <string name="demo">DEMO</string>
    <string name="heartrate">\?\?</string>
    <string name="bpm">bpm</string>
    <string name="start">Start</string>

    <string name="ok">Ok</string>

    <string-array name="draft_enabled_devices">
        <item>990012010648373</item>
        <item>358240051111110</item>
        <item>867841042118256</item>
    </string-array>

    <string name="woid">Work Order Id</string>
    <string name="status">Status</string>
    <string name="timestamp">Timestamp</string>
    <string name="receiving_WO">Receiving Work Order</string>
    <string name="dash">-</string>
    <string name="pleasewait">Please Wait...</string>

    <string name="speechText">You will see input here</string>

    <string name="servername">Please type the server name</string>
    <string name="reported">REPORTED</string>

    <string name="title_stepcount">Step Counter</string>
    <string name="stepcount">0</string>
    <string name="step">Steps</string>

    <string name="seconds">seconds</string>
</resources>
