<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.FallDetection.FallDetectionActivity"
    android:background="@android:color/black">

    <TextView
        android:id="@+id/last_x_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_x_value"
        android:fontFamily="@font/google"
        android:textSize="@dimen/text_size_small"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/last_y_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/last_x_value"
        android:text="@string/last_y_value"
        android:fontFamily="@font/google"
        android:textSize="@dimen/text_size_small"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/last_z_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/last_y_value"
        android:text="@string/last_z_value"
        android:fontFamily="@font/google"
        android:textSize="@dimen/text_size_small"
        android:textColor="@android:color/white"/>


    <TextView
        android:id="@+id/x_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x_value"
        android:fontFamily="@font/google"
        android:layout_below="@id/last_z_value"
        android:textSize="@dimen/text_size_small"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/y_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/x_value"
        android:text="@string/y_value"
        android:fontFamily="@font/google"
        android:textSize="@dimen/text_size_small"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/z_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/y_value"
        android:text="@string/z_value"
        android:fontFamily="@font/google"
        android:textSize="@dimen/text_size_small"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/current_change_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/z_value"
        android:text="@string/current_change_amount"
        android:fontFamily="@font/google"
        android:textSize="@dimen/text_size_small"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/current_boundary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/current_change_amount"
        android:text="@string/current_boundary"
        android:fontFamily="@font/google"
        android:textSize="@dimen/text_size_small"
        android:textColor="@android:color/white"/>

</RelativeLayout>