<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StepCounter.StepCounterFragment"
    android:background="@android:color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/fab_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_stepcount"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            android:fontFamily="@font/google"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/stepcounter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step"
            android:fontFamily="@font/google"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:id="@+id/tv_info"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_gap"
            android:text="@string/stepcount"
            android:fontFamily="@font/google"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:id="@+id/tv_steps"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_large"/>

    </LinearLayout>

</ScrollView>