<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_marginTop="@dimen/margin_top"
        android:gravity="center_horizontal"
        android:text="@string/acc_login"
        android:textStyle="bold"
        android:fontFamily="@font/google"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_small"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/margin_left"
            android:layout_marginEnd="@dimen/margin_right"
            android:elevation="@dimen/elevation"
            android:background="@drawable/signincard_edge">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/google">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/username"
                    android:fontFamily="@font/google"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/google"
                android:paddingBottom="@dimen/padding_top">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/padding_large"
                    android:singleLine="true"
                    android:hint="@string/serverPWD"
                    android:fontFamily="@font/google"
                    android:inputType="numberPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/signin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/signbtn"
                android:text="@string/sign_in"
                android:paddingTop="@dimen/padding_top"
                android:paddingBottom="@dimen/padding_top"
                android:fontFamily="@font/google"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>
    </LinearLayout>