<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:theme="@style/Material"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription"
    android:id="@+id/card"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:focusable="true"
    android:clickable="true"
    app:cardCornerRadius="4dp"
    app:cardUseCompatPadding="true"
    android:overScrollMode="always"
    android:elevation="4dp"
    android:background="@drawable/card_edge"
    android:layout_gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/card_edge">

        <ImageView
            android:id="@+id/human"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/black"
            android:src="@drawable/human_white"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="@dimen/text_size_small"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:fontFamily="@font/google"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/txtLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="@dimen/text_size_normal"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:fontFamily="@font/google"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/txtstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:fontFamily="@font/google"
            android:text="@string/status"
            android:textColor="@color/statuscolor"
            android:textSize="@dimen/text_size_exsmall"
            android:textStyle="bold"
            android:layout_gravity="center"/>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
